fix letter spacings and text styles

--- a/ITECH/static/css/creative.css
+++ b/ITECH/static/css/creative.css
@@ -624,6 +624,7 @@ tbody{
 
 .noOverflow{
      overflow-y: hidden;
+     height:auto;
 }
 
 .tableLeaderboard{
@@ -631,7 +632,9 @@ tbody{
  bottom: auto;
 }
 
-
+.biggerText{
+font-size: 65px;
+}
 
 
 .tableLeaderboard table.scroll {
@@ -734,9 +737,22 @@ top: 80px;
 .styletitle{
  text-transform: uppercase;
  color:white
-}
+ font:normal 30pt Arial;
+ color:#FFFFFF;
+ text-shadow: 0 1px 0 #ccc,
+ 0 2px 0 #c9c9c9,
+ 0 3px 0 #bbb,
+ 0 4px 0 #b9b9b9,
+ 0 5px 0 #aaa,
+ 0 6px 1px rgba(0,0,0,.1),
+ 0 0 5px rgba(0,0,0,.1),
+ 0 1px 3px rgba(0,0,0,.3),
+ 0 3px 5px rgba(0,0,0,.2),
+ 0 5px 10px rgba(0,0,0,.25),
+ 0 10px 10px rgba(0,0,0,.2),
+ 0 20px 20px rgba(0,0,0,.15);
 
-#wrapper h1{
+.wrapper h1{
  font:normal 50pt Arial;
  color:#FFFFFF;
  text-shadow: 0 1px 0 #ccc,
@@ -753,21 +769,11 @@ top: 80px;
  0 20px 20px rgba(0,0,0,.15);
 }
 
-#wrapper p{
- font:normal 30pt Arial;
- color:#FFFFFF;
- text-shadow: 0 1px 0 #ccc,
- 0 2px 0 #c9c9c9,
- 0 3px 0 #bbb,
- 0 4px 0 #b9b9b9,
- 0 5px 0 #aaa,
- 0 6px 1px rgba(0,0,0,.1),
- 0 0 5px rgba(0,0,0,.1),
- 0 1px 3px rgba(0,0,0,.3),
- 0 3px 5px rgba(0,0,0,.2),
- 0 5px 10px rgba(0,0,0,.25),
- 0 10px 10px rgba(0,0,0,.2),
- 0 20px 20px rgba(0,0,0,.15);
+
+
+}
+.letterspacing{
+letter-spacing: 7px;
 }
 
 .borderImage {
@@ -792,7 +798,7 @@ top: 80px;
 
 }
 
-.btn {
+.btnPlay {
   background: #b1ddfa;
   background-image: -webkit-linear-gradient(top, #b1ddfa, #12a4ff);
   background-image: -moz-linear-gradient(top, #b1ddfa, #12a4ff);
@@ -812,7 +818,7 @@ top: 80px;
   white-space: normal;
 }
 
-.btn:hover {
+.btnPlay:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
